# realtime-phone-agents-course

./: .env.example  Makefile  README.md  pyproject.toml
docs/: GETTINGS_STARTED.md
notebooks/: lesson_1_fastrtc_agents.ipynb
scripts/: run_gradio_application.py
src/realtime_phone_agents/: config.py
src/realtime_phone_agents/agent/: fastrtc_agent.py
src/realtime_phone_agents/observability/: opik.py
src/realtime_phone_agents/stt/models/: faster_whisper.py
src/realtime_phone_agents/tts/: utils.py
src/realtime_phone_agents/tts/models/orpheus_runpod/: model.py  options.py  token_decoders.py
src/realtime_phone_agents/tts/models/together/: __init__.py  model.py  options.py
