[project]
name = "realtime-phone-agents-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "fastrtc[stt,tts,vad]>=0.0.33",
    "groq>=0.34.1",
    "huggingface-hub==0.36.0",
    "inquirer>=3.4.1",
    "langchain>=1.0.7",
    "langchain-groq>=1.0.1",
    "loguru>=0.7.3",
    "openai>=2.8.0",
    "opik>=1.9.40",
    "pydantic>=2.11.10",
    "pydantic-settings>=2.12.0",
    "pytz>=2025.2",
    "qdrant-client>=1.16.1",
    "runpod>=1.8.1",
    "snac>=1.2.1",
    "superlinked>=37.5.0",
    "torch>=2.9.1",
    "transformers>=4.57.2",
    "twilio>=9.8.6",
    "typer>=0.20.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
packages = ["src/realtime_phone_agents"]
